build/log/idf_py_stderr_output_65170
In file included from /home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/tflite_bridge/flatbuffer_conversions_bridge.h:19,
                 from /home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_allocator.h:26,
                 from /home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_interpreter.h:26,
                 from /home/andrespf02/esp/final2/person_detection/main/main_functions.cc:22:
/home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h: In member function 'T* tflite::BuiltinDataAllocator::AllocatePOD()':
/home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h:46:24: warning: 'template<class _Tp> struct std::is_pod' is deprecated: use 'is_standard_layout && is_trivial' instead [-Wdeprecated-declarations]
   46 |     static_assert(std::is_pod<T>::value, "Builtin data structure must be POD.");
      |                        ^~~~~~
In file included from /home/andrespf02/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/stl_pair.h:60,
                 from /home/andrespf02/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/utility:69,
                 from /home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/c/common.h:1463,
                 from /home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/c/common.h:31,
                 from /home/andrespf02/esp/final2/person_detection/main/detection_responder.h:22,
                 from /home/andrespf02/esp/final2/person_detection/main/main_functions.cc:18:
/home/andrespf02/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/type_traits:819:5: note: declared here
  819 |     is_pod
      |     ^~~~~~
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc: In function 'void setup()':
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:107:31: warning: empty parentheses were disambiguated as a function declaration [-Wvexing-parse]
  107 | inline uint32_t get_cpu_cycles() {
      |                               ^~
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:107:31: note: remove parentheses to default-initialize a variable
  107 | inline uint32_t get_cpu_cycles() {
      |                               ^~
      |                               --
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:107:31: note: or replace parentheses with braces to value-initialize a variable
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:107:34: error: a function-definition is not allowed here before '{' token
  107 | inline uint32_t get_cpu_cycles() {
      |                                  ^
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:114:66: error: a function-definition is not allowed here before '{' token
  114 | void measure_cpi(const char* task_name, void (*task_function)()) {
      |                                                                  ^
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:131:24: error: a function-definition is not allowed here before '{' token
  131 | void average_pool_2d() { micro_op_resolver.AddAveragePool2D(); }
      |                        ^
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:132:17: error: a function-definition is not allowed here before '{' token
  132 | void quantize() { micro_op_resolver.AddQuantize(); }
      |                 ^
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:133:20: error: a function-definition is not allowed here before '{' token
  133 | void max_pool_2d() { micro_op_resolver.AddMaxPool2D(); }
      |                    ^
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:134:24: error: a function-definition is not allowed here before '{' token
  134 | void fully_connected() { micro_op_resolver.AddFullyConnected(); }
      |                        ^
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:135:16: error: a function-definition is not allowed here before '{' token
  135 | void conv_2d() { micro_op_resolver.AddConv2D(); }
      |                ^
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:136:26: error: a function-definition is not allowed here before '{' token
  136 | void depthwise_conv_2d() { micro_op_resolver.AddDepthwiseConv2D(); }
      |                          ^
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:137:16: error: a function-definition is not allowed here before '{' token
  137 | void reshape() { micro_op_resolver.AddReshape(); }
      |                ^
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:138:16: error: a function-definition is not allowed here before '{' token
  138 | void softmax() { micro_op_resolver.AddSoftmax(); }
      |                ^
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:141:29: error: a function-definition is not allowed here before '{' token
  141 | void measure_all_subtasks() {
      |                             ^
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:177:3: error: 'measure_all_subtasks' was not declared in this scope
  177 |   measure_all_subtasks();
      |   ^~~~~~~~~~~~~~~~~~~~
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc: In function 'void run_inference(void*)':
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:241:38: warning: unused variable 'icount_start' [-Wunused-variable]
  241 |   unsigned ccount_start, ccount_end, icount_start, icount_end;
      |                                      ^~~~~~~~~~~~
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:254:13: warning: unused variable 'endTimeTotal' [-Wunused-variable]
  254 |   long long endTimeTotal = 0;
      |             ^~~~~~~~~~~~
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:255:13: warning: unused variable 'startTimePre' [-Wunused-variable]
  255 |   long long startTimePre = 0;
      |             ^~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:118: esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
